<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_name" translatable="false">Intra</string>
  <string name="intro_benefit_headline" description="Headline for intro page describing key benefit">
    More open internet access
  </string>
  <string name="intro_benefit_body" description="Body text for intro page describing key benefit">
    Intra protects you from DNS manipulation, a cyber attack used to block access to news sites, social media platforms and messaging apps.\n\nWhile Intra protects you against DNS manipulation, there are other, more complicated blocking techniques and attacks that Intra doesn\'t protect against.
  </string>
  <string name="intro_manipulation_headline" description="Headline for intro page describing manipulation">
    Protection from DNS manipulation
  </string>
  <string name="intro_manipulation_body" description="Body text for intro page describing manipulation">
    Intra protects your connection to the Domain Name System (DNS), which provides the exact addresses you need to visit a website or open an app.\n\nIntra uses encryption to ensure that results can\’t be manipulated, helping you safely access the internet.
  </string>
  <string name="intro_details_headline" description="Headline for intro page describing permissions and privacy">
    One last thing&#8230;
  </string>
  <string name="intro_details_body" description="Body text for intro page describing permissions and privacy">
    Tap OK to allow Intra to protect your DNS requests. By default, they will be routed to Google Public DNS (<a href="https://developers.google.com/speed/public-dns/privacy">Privacy Policy</a>). You can choose another service in the app settings.
  </string>
  <string name="intro_back" description="Button label to see the previous page of introduction">
    back
  </string>
  <string name="intro_next" description="Button label to see the next page of introduction">
    next
  </string>
  <string name="intro_accept"
          description="Button label to acknowledge legal terms and VPN access permission request">
    accept
  </string>
  <string name="drawer_open"
          description="Hint for visually impaired users to access the menu.">
    Open navigation drawer
  </string>
  <string name="drawer_close"
          description="Hint for visually impaired users to leave the menu.">
    Close navigation drawer
  </string>
  <string name="home"
          description="Menu label to return to the app's main screen.">
    Home
  </string>
  <string name="settings"
          description="Menu label to access the Settings page.">
    Settings
  </string>
  <string name="support"
          description="Menu entry that links to documentation and interactive support.">
    Support
  </string>
  <string name="privacy_link"
          description="Link to the privacy policy.">
    Privacy Policy
  </string>
  <string name="tos_link"
          description="Link to the terms of service.">
    Terms of Service
  </string>
  <string name="source_code"
          description="Link to the source code for this app.">
    Source Code
  </string>
  <string name="credits_text"
          description="Credits to contributing parties. 'Jigsaw' and 'Intra' are not translatable.">
    Intra was made by <a href="https://jigsaw.google.com">Jigsaw</a>. IP locations are based on data
    from DB-IP.com.
  </string>
  <string name="indicator_on"
          description="This is a large message at the top of the main screen.">
    On
  </string>
  <string name="indicator_off"
          description="This is a large message at the top of the main screen.">
    Off
  </string>
  <string name="status_exposed"
          description="This is a large message in a scary color.  It indicates that DNS queries can be surveilled or modified in transit.">
    Exposed
  </string>
  <string name="explanation_exposed"
          description="Expanded form of status_exposed">
    Your connection is exposed to DNS attacks.
  </string>
  <string name="status_protected"
          description="This is a large message in a reassuring color.  It indicates that DNS queries can't be surveilled or modified in transit.">
    Protected
  </string>
  <string name="explanation_protected"
          description="Expanded form of status_protected">
    Your connection is protected from DNS attacks.
  </string>
  <string name="status_upgraded"
          description="This is similar to status_exposed, and indicates weak protection that an attacker could disable.">
    Vulnerable
  </string>
  <string name="explanation_upgraded"
          description="Corresponds to status_upgraded.">
    Your connection is currently protected by Android Private DNS, but an attacker could disable
    or undermine this protection.
  </string>
  <string name="status_strict"
          description="This is similar to dns_on, but the protection is being provided by the operating system, not by Intra.  It is not color-highlighted.">
    Protected by Android
  </string>
  <string name="explanation_strict"
          description="Explanation on the main screen for users who have Private DNS strict mode enabled at the OS level.">
    Intra has detected that the Android Private DNS setting is enabled.  This means your DNS
    queries are already protected, so there\'s no need to enable Intra.
  </string>
  <string name="status_starting"
          description="This text briefly appears while starting.">
    Starting&#8230;
  </string>
  <string name="explanation_starting"
          description="Corresponds to status_starting">
    Hang tight.  Intra is establishing a server connection.
  </string>
  <string name="status_waiting"
      description="This text appears during the connection process if Intra needs user permission or the phone is offline.">
    Waiting&#8230;
  </string>
  <string name="status_failing"
      description="This text appears if the connection is currently not working correctly. [CHAR_LIMIT=NONE]">
    Failing
  </string>
  <string name="explanation_offline"
          description="Status indicator shown when there is no network connection.">
    Your device is offline.  Intra is waiting for a network connection.
  </string>
  <string name="explanation_vpn"
          description="Warning text shown on the main screen before the user starts Intra">
    Intra has detected another VPN on your device.  If you enable Intra, that VPN will be disabled.
    Intra is not as secure as a trusted VPN.
  </string>
  <string name="explanation_failing">
    Warning: Queries are failing.  You may want to choose a different server or restart Intra.
  </string>
  <string name="system_details"
          description="This is the title of a section containing information on the system configuration and
  status.">
    System details
  </string>
  <string name="num_requests"
          description="This text appears under the number of queries protected so far.">
    Lifetime queries
  </string>
  <string name="num_requests_headline">
    DNS queries happen when your device looks up the IP address for a domain name
  </string>
  <string name="num_requests_body">
    This value shows the total number of DNS queries that your device has performed while Intra was
    active.  Intra encrypts these queries and sends them to a trusted server to make sure you\'re
    getting authentic results.
  </string>
  <string name="queries_per_minute"
          description="This text appears under the number of queries protected in the past minute.">
    Recent queries
  </string>
  <string name="queries_per_minute_headline">
    DNS queries happen at the beginning of each connection
  </string>
  <string name="queries_per_minute_body">
    This value shows the number of DNS queries that your device has performed in the last minute.
    Loading a complex webpage can require over a hundred DNS queries.
  </string>
  <string name="transport_label"
          description="This text appears under the name of the secure protocol currently in use.  Currently, that
   is always 'https'.">
    Encrypted transport
  </string>
  <string name="transport_headline">
    Encryption protects your queries from prying eyes
  </string>
  <string name="transport_body">
    When you use Intra, your DNS queries are encrypted, so that only you and your DNS server can see
    what DNS queries you are making.  Intra implements the DNS over HTTPS protocol for encryption.
  </string>
  <string name="default_transport_label"
          description="This text appears under the name of the DNS protocol in use when Intra is off.  Currently,
  that is usually 'unencrypted'.">
    Default transport
  </string>
  <string name="insecure_transport" description="Indicates that normal, insecure DNS is in use.">
    unencrypted
  </string>
  <string name="tls_transport" description="Indicates that 'DNS over TLS' protocol is in use"
      translatable="false">
    tls
  </string>
  <string name="insecure_transport_headline">
    Basic DNS is unencrypted
  </string>
  <string name="insecure_transport_body">
    Most devices and networks use basic DNS, which is unencrypted, so your DNS queries could be
    observed or modified by anyone on the network.  Some new devices support DNS over TLS, which
    encrypts your queries but can\'t protect you if the server is malicious.
  </string>
  <string name="server_label"
          description="This text appears under the domain name of the secure server currently in use, e.g. 'dns.google.com'.">
    Secure DNS server
  </string>
  <string name="server_headline">
    You deserve to use a trustworthy DNS server
  </string>
  <string name="server_body">
    This field shows the name of the secure DNS server that you\'re using.  You can also change to a
    different server in the Settings menu.
  </string>
  <string name="default_server_label"
          description="This text appears under the name of the insecure server currently in use.">
    Current DNS server
  </string>
  <string name="insecure_server_headline">
    You can choose your own DNS server
  </string>
  <string name="insecure_server_body">
    When Intra is disabled, most devices are pre-configured to use the DNS server your network
    operator picks. This field shows the IP address of the DNS server that your device is currently
    using. With Intra or Android P, you can easily select a server of your choice.
  </string>
  <string name="strict_mode_server_headline">
    You\'ve selected a secure server
  </string>
  <string name="strict_mode_server_body">
    This field shows the name of the DNS server that you configured in Android\'s Private DNS
    setting.  When Intra is disabled, your apps should send DNS queries to this server.
  </string>
  <string name="unknown_server"
          description="This is a placeholder, used when the server address is unknown.">
    (unknown server)
  </string>
  <string name="show_history"
          description="This label appears next to a checkbox.  When the box is checked, recent queries will start
  being shown.">
    Show recent queries
  </string>
  <string name="query_label"
          description="This text appears under the domain name for which a DNS query was issued.">
    Query
  </string>
  <string name="type_label"
          description="This text appears under the type of query that was issued ('A' or 'AAAA').">
    Type
  </string>
  <string name="latency_label"
          description="This text appears under a measurement of network latency, like '923 ms'.">
    Latency
  </string>
  <string name="resolver_label"
          description="This text appears under a two-letter ISO country code, indicating the country where the
  DNS resolver is located.">
    Resolver location
  </string>
  <string name="destination_label"
          description="This text appears under a two-letter ISO country code, indicating the country where the
  resolved domain's IP address is located.">
    Destination server
  </string>
</resources>