<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/system_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/system_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible">

        <LinearLayout
                android:id="@+id/lifetime_queries_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:orientation="vertical"
                android:background="@color/floating"
                app:layout_constraintEnd_toStartOf="@+id/qpm_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/protocol_box">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="64dp"
                    android:tint="@color/accent_good"
                    app:srcCompat="@drawable/ic_dns"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:id="@+id/numRequests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:text="10,000"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="2"
                    android:text="@string/num_requests"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/qpm_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="2dp"
                android:orientation="vertical"
                android:background="@color/floating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lifetime_queries_box"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/server_box">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="64dp"
                    android:tint="@color/accent_good"
                    app:srcCompat="@drawable/ic_trending_up_black_24dp"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:id="@+id/qpm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toEndOf="@+id/numRequests"
                    tools:text="75"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="2"
                    android:text="@string/queries_per_minute"/>
        </LinearLayout>

        <!-- TODO: Add a constraint.Barrier here once ConstraintLayout-1.1.0 is stable. -->
        <LinearLayout
                android:id="@+id/protocol_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:orientation="vertical"
                android:background="@color/floating"
                app:layout_constraintEnd_toStartOf="@+id/server_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lifetime_queries_box"
                app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="64dp"
                    android:tint="@color/accent_good"
                    app:srcCompat="@drawable/ic_lock_black_24dp"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="https"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="2"
                    android:text="@string/transport_label"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/server_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                android:background="@color/floating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/protocol_box"
                app:layout_constraintTop_toBottomOf="@+id/qpm_box"
                app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="64dp"
                    android:tint="@color/accent_good"
                    app:srcCompat="@drawable/ic_server"
                    tools:ignore="ContentDescription"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/server"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:scrollbars="horizontal"
                        android:singleLine="true"
                        android:textIsSelectable="true"
                        android:focusable="false"
                        android:text="dns.google.com"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="2"
                    android:text="@string/server_label"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/insecure_system_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/default_protocol_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                android:background="@color/floating"
                app:layout_constraintEnd_toStartOf="@+id/default_server_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                    android:id="@+id/default_protocol_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="64dp"
                    android:tint="@color/accent_bad"
                    app:srcCompat="@drawable/ic_lock_open_black_24dp"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:id="@+id/default_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/insecure_transport"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="2"
                    android:text="@string/default_transport_label"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/default_server_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                android:background="@color/floating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/default_protocol_box"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                    android:id="@+id/default_server_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="64dp"
                    android:tint="@color/accent_bad"
                    app:srcCompat="@drawable/ic_server"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:id="@+id/default_server_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="none"
                    android:scrollbars="horizontal"
                    android:singleLine="true"
                    android:text="@string/unknown_server"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textIsSelectable="true"
                    android:focusable="false"
                    tools:text="very:long:addr:goes:here"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="2"
                    android:text="@string/insecure_server_label"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>
